--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,6 +8,22 @@ license = "Apache-2.0"
 
 default-run = "server"
 
+[[bin]]
+name = "server"
+path = "src/main.rs"
+
+[[bin]]
+name = "local"
+path = "src/local.rs"
+required-features = ["local"]
+
+[[bin]]
+name = "local_template"
+path = "src/local_TEMPLATE.rs"
+
+[features]
+local = []
+
 [dependencies]
 async-trait = "0.1.60"
 axum = "0.6.2"
@@ -61,6 +77,8 @@ typify = "0.0.14"
 tower-cookies = { version = "0.9.0", features = ["private", "signed"] }
 debug-ignore = "1.0.5"
 base64 = "0.21.5"
+gql_client = "1.0.7"
+jsonwebtoken = "9.1.0"
 
 [build-dependencies]
 vergen = { version = "8.0.0", features = ["git", "gitoxide", "rustc"] }
