--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ ssri = "9.0.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
-chrono = { version = "0.4.23", default-features = false }
+chrono = { version = "0.4.23", default-features = false, features = ["serde"] }
 
 rss = { version = "2.0", features = ["validation"] }
 markdown = "1.0.0-alpha"
