--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -81,6 +81,7 @@ base64 = "0.21.5"
 gql_client = { git = "https://github.com/coreyja/gql-client-rs", rev = "d3bcd33" }
 jsonwebtoken = "9.1.0"
 age = { version = "0.9.2", features = ["async"] }
+graphql_client = { version = "0.13.0", features = ["reqwest-rustls"] }
 
 [build-dependencies]
 vergen = { version = "8.0.0", features = ["git", "gitoxide", "rustc"] }
