--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["byte", "posts", "server", "tracing-common", "video-toolkit"]
+members = ["byte", "posts", "server", "tracing-common", "video-toolkit", "db"]
 resolver = "2"
 
 [workspace.dependencies]
@@ -33,9 +33,18 @@ ssri = "9.0.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
-chrono = { version = "0.4.23", default-features = false }
+chrono = { version = "0.4.23", default-features = false, features = ["serde"] }
 
 rss = { version = "2.0", features = ["validation"] }
 markdown = "1.0.0-alpha"
 include_dir = { version = "0.7.3", features = ["metadata", "glob"] }
 path-absolutize = "3.0"
+
+sqlx = { version = "0.7", features = [
+  "postgres",
+  "runtime-tokio-rustls",
+  "chrono",
+  "migrate",
+  "macros",
+  "uuid",
+] }
