--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,22 +8,39 @@ license = "Apache-2.0"
 
 default-run = "server"
 
+[[bin]]
+name = "server"
+path = "src/main.rs"
+
+[[bin]]
+name = "local"
+path = "src/local.rs"
+required-features = ["local"]
+
+[[bin]]
+name = "local_template"
+path = "src/local_TEMPLATE.rs"
+
+[features]
+local = []
+
 [dependencies]
 async-trait = "0.1.60"
-axum = "0.6.2"
-axum-macros = "0.3.1"
+axum = "0.7.1"
+axum-macros = "0.4.0"
 chrono = { workspace = true }
 clap = { workspace = true }
 include_dir = { workspace = true }
 indoc = "2.0"
 markdown = { workspace = true }
-maud = { version = "0.25.0", features = ["axum"] }
+maud = { version = "0.25.0", features = [
+  "axum",
+], git = "https://github.com/vidhanio/maud", rev = "fb77d399d001a345f3a369eb2c7a12da243376a6" }
 miette = { workspace = true }
 mime_guess = "2.0"
 opentelemetry = { workspace = true }
 opentelemetry-otlp = { workspace = true }
 path-absolutize = { workspace = true }
-poise = "0.5.5"
 reqwest = { workspace = true }
 rss = { workspace = true }
 sentry = { version = "0.31.5", default-features = false, features = [
@@ -42,7 +59,7 @@ syntect = "5.0"
 thiserror = "1.0"
 tokio = { workspace = true }
 tower = "0.4.13"
-tower-http = { version = "0.4.0", features = ["trace"] }
+tower-http = { version = "0.5.0", features = ["trace"] }
 tracing = { workspace = true }
 tracing-opentelemetry = { workspace = true }
 tracing-subscriber = { workspace = true }
@@ -53,8 +70,18 @@ uuid = { version = "1.2", features = ["v4"] }
 
 openai = { path = "../openai" }
 posts = { path = "../posts" }
+db = { path = "../db" }
+sqlx = { workspace = true }
 itertools = "0.12.0"
 sentry-tracing = "0.31.8"
+typify = "0.0.14"
+tower-cookies = { version = "0.10.0", features = ["private", "signed"] }
+debug-ignore = "1.0.5"
+base64 = "0.21.5"
+gql_client = { git = "https://github.com/coreyja/gql-client-rs", rev = "d3bcd33" }
+jsonwebtoken = "9.1.0"
+age = { version = "0.9.2", features = ["async"] }
+graphql_client = { version = "0.13.0", features = ["reqwest-rustls"] }
 
 [build-dependencies]
 vergen = { version = "8.0.0", features = ["git", "gitoxide", "rustc"] }
