Do an advisory lock around migrations

--- a/db/Cargo.toml
+++ b/db/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 chrono.workspace = true
 miette = { workspace = true }
 sqlx = { workspace = true }
+tracing = { workspace = true }
