Add recent videos to home page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
-  "rust-analyzer.showUnlinkedFileNotification": false,
   "cSpell.words": [
     "chrono",
-    "reqwest"
+    "reqwest",
+    "rustc",
+    "vergen"
   ]
 }
