--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-  "cSpell.words": [
-    "chrono",
-    "reqwest",
-    "rustc",
-    "vergen"
-  ]
+  "cSpell.words": ["chrono", "reqwest", "rustc", "UNNEST", "vergen"]
 }
