--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-  "rust-analyzer.showUnlinkedFileNotification": false,
-  "cSpell.words": [
-    "chrono",
-    "reqwest"
-  ]
+  "cSpell.words": ["chrono", "reqwest", "rustc", "UNNEST", "vergen"]
 }
