--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,15 +12,6 @@ default-run = "server"
 name = "server"
 path = "src/main.rs"
 
-[[bin]]
-name = "local"
-path = "src/local.rs"
-required-features = ["local"]
-
-[[bin]]
-name = "local_template"
-path = "src/local_TEMPLATE.rs"
-
 [features]
 local = []
 
@@ -82,6 +73,9 @@ gql_client = { git = "https://github.com/coreyja/gql-client-rs", rev = "d3bcd33"
 jsonwebtoken = "9.1.0"
 age = { version = "0.9.2", features = ["async"] }
 graphql_client = { version = "0.13.0", features = ["reqwest-rustls"] }
+google-youtube3 = "5.0.3"
+futures = "0.3.29"
+chrono-humanize = "0.2.3"
 
 [build-dependencies]
 vergen = { version = "8.0.0", features = ["git", "gitoxide", "rustc"] }
