--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["chrono", "reqwest", "rustc", "UNNEST", "vergen"]
+  "cSpell.words": ["chrono", "otel", "reqwest", "rustc", "UNNEST", "vergen"]
 }
