Get basic page for course laid out and access controlled

--- a/db/Cargo.toml
+++ b/db/Cargo.toml
@@ -10,3 +10,4 @@ chrono.workspace = true
 miette = { workspace = true }
 sqlx = { workspace = true }
 tracing = { workspace = true }
+uuid = "1.6.1"
