Add license for cja

--- a/cja/Cargo.toml
+++ b/cja/Cargo.toml
@@ -4,6 +4,7 @@ description = "Cron, Jobs and Axum a meta-framework for building web application
 authors = ["Corey Alexander"]
 version = "0.0.0"
 edition = "2021"
+license = "Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
