Move from laptop to desktop

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,5 +13,9 @@
     "thiserror",
     "UNNEST",
     "vergen"
+  ],
+  "rust-analyzer.linkedProjects": [
+    "./cja/Cargo.toml",
+    "./cja/Cargo.toml"
   ]
 }
