--- a/cja/Cargo.toml
+++ b/cja/Cargo.toml
@@ -9,3 +9,13 @@ license = "Apache-2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+thiserror = "1.0.56"
+sqlx.workspace = true
+tokio.workspace = true
+tracing.workspace = true
+uuid = "1.6.1"
+serde.workspace = true
+async-trait = "0.1.77"
+serde_json.workspace = true
+chrono.workspace = true
+miette.workspace = true
