Get everything to compile at least!

--- a/cja/Cargo.toml
+++ b/cja/Cargo.toml
@@ -13,7 +13,7 @@ thiserror = "1.0.56"
 sqlx.workspace = true
 tokio.workspace = true
 tracing.workspace = true
-uuid = "1.6.1"
+uuid.workspace = true
 serde.workspace = true
 async-trait = "0.1.77"
 serde_json.workspace = true
