--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -62,11 +62,13 @@ tracing-subscriber = { workspace = true }
 tracing-tree = { workspace = true }
 url = "2.4.0"
 urlencoding = "2.1"
-uuid = { version = "1.2", features = ["v4"] }
+uuid.workspace = true
 
 openai = { path = "../openai" }
 posts = { path = "../posts" }
 db = { path = "../db" }
+cja = { path = "../cja" }
+
 sqlx = { workspace = true }
 itertools = "0.12.0"
 sentry-tracing = "0.31.8"
