--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,8 +12,13 @@ default-run = "server"
 name = "server"
 path = "src/main.rs"
 
+[[bin]]
+name = "gen_app_keys"
+path = "src/generate_app_keys.rs"
+
 [features]
 local = []
+test_auth = []
 
 [dependencies]
 async-trait = "0.1.60"
@@ -26,7 +31,7 @@ indoc = "2.0"
 markdown = { workspace = true }
 maud = { version = "0.25.0", features = [
   "axum",
-], git = "https://github.com/vidhanio/maud", rev = "fb77d399d001a345f3a369eb2c7a12da243376a6" }
+], git = "https://github.com/lambda-fairy/maud", rev = "320add87a12d8e5be115de9e0fe3f4b331512a4a" }
 miette = { workspace = true }
 mime_guess = "2.0"
 opentelemetry = { workspace = true }
@@ -76,6 +81,8 @@ graphql_client = { version = "0.13.0", features = ["reqwest-rustls"] }
 google-youtube3 = "5.0.3"
 futures = "0.3.29"
 chrono-humanize = "0.2.3"
+rsa = "0.9.4"
+rand = "0.8.5"
 
 [build-dependencies]
 vergen = { version = "8.0.0", features = ["git", "gitoxide", "rustc"] }
