--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,4 +57,4 @@ sqlx = { version = "0.7", features = [
   "uuid",
 ] }
 
-uuid = { version = "1.6.1", features = ["v4"] }
+uuid = { version = "1.6.1", features = ["v4", "serde"] }
