--- a/cja/Cargo.toml
+++ b/cja/Cargo.toml
@@ -17,6 +17,7 @@ serde.workspace = true
 serde_json.workspace = true
 chrono.workspace = true
 miette.workspace = true
+base64.workspace = true
 
 axum-core = "0.4.2"
 async-trait = "0.1.77"
