--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -75,7 +75,7 @@ sentry-tracing = "0.31.8"
 typify = "0.0.14"
 tower-cookies = { version = "0.10.0", features = ["private", "signed"] }
 debug-ignore = "1.0.5"
-base64 = "0.21.5"
+base64.workspace = true
 gql_client = { git = "https://github.com/coreyja/gql-client-rs", rev = "d3bcd33" }
 jsonwebtoken = "9.1.0"
 age = { version = "0.9.2", features = ["async"] }
