--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,13 @@
 [workspace]
-members = ["byte", "posts", "server", "tracing-common", "video-toolkit", "db"]
+members = [
+  "byte",
+  "cja",
+  "db",
+  "posts",
+  "server",
+  "tracing-common",
+  "video-toolkit",
+]
 resolver = "2"
 
 [workspace.dependencies]
@@ -48,3 +56,7 @@ sqlx = { version = "0.7", features = [
   "macros",
   "uuid",
 ] }
+
+uuid = { version = "1.6.1", features = ["v4", "serde"] }
+
+base64 = "0.21.7"
