--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -62,18 +62,20 @@ tracing-subscriber = { workspace = true }
 tracing-tree = { workspace = true }
 url = "2.4.0"
 urlencoding = "2.1"
-uuid = { version = "1.2", features = ["v4"] }
+uuid.workspace = true
 
 openai = { path = "../openai" }
 posts = { path = "../posts" }
 db = { path = "../db" }
+cja = { path = "../cja" }
+
 sqlx = { workspace = true }
 itertools = "0.12.0"
 sentry-tracing = "0.31.8"
 typify = "0.0.14"
 tower-cookies = { version = "0.10.0", features = ["private", "signed"] }
 debug-ignore = "1.0.5"
-base64 = "0.21.5"
+base64.workspace = true
 gql_client = { git = "https://github.com/coreyja/gql-client-rs", rev = "d3bcd33" }
 jsonwebtoken = "9.1.0"
 age = { version = "0.9.2", features = ["async"] }
