Fix test auth. I didn't realize this was in its own crate

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -18,7 +18,7 @@ path = "src/generate_app_keys.rs"
 
 [features]
 local = []
-test_auth = []
+test_auth = ["posts/test_auth"]
 
 [dependencies]
 async-trait = "0.1.60"
