Get cargo leptos end-to-end working

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,3 +61,11 @@ sqlx = { version = "0.7", features = [
 uuid = { version = "1.6.1", features = ["v4", "serde"] }
 
 base64 = "0.21.7"
+
+# Defines a size-optimized profile for the WASM bundle in release mode
+[profile.wasm-release]
+inherits = "release"
+opt-level = 'z'
+lto = true
+codegen-units = 1
+panic = "abort"
