--- a/leptos_site/Cargo.toml
+++ b/leptos_site/Cargo.toml
@@ -38,14 +38,6 @@ ssr = [
     "dep:tracing",
 ]
 
-# Defines a size-optimized profile for the WASM bundle in release mode
-[profile.wasm-release]
-inherits = "release"
-opt-level = 'z'
-lto = true
-codegen-units = 1
-panic = "abort"
-
 [package.metadata.leptos]
 # The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
 output-name = "leptos_site"
@@ -75,7 +67,7 @@ reload-port = 3001
 #   [Windows] for non-WSL use "npx.cmd playwright test"
 #   This binary name can be checked in Powershell with Get-Command npx
 end2end-cmd = "npx playwright test"
-end2end-dir = "end2end"
+end2end-dir = "leptos_site/end2end"
 
 #  The browserlist query used for optimizing the CSS.
 browserquery = "defaults"
