Try running end2end tests in CI

--- a/.github/workflows/rust_tests.yml
+++ b/.github/workflows/rust_tests.yml
@@ -112,3 +112,28 @@ jobs:
         run: cargo binstall --no-confirm cargo-deny
       - name: Cargo Deny
         run: cargo-deny check bans
+  end-to-end:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./leptos_site
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - uses: dtolnay/rust-toolchain@stable
+      - name: Install cargo-leptos
+        run: cargo install cargo-leptos
+      - name: Install dependencies
+        run: cd end2end && npm ci
+      - name: Install Playwright Browsers
+        run: cd end2end && npx playwright install --with-deps
+      - name: Run Playwright tests
+        run: cargo leptos end-to-end
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
