--- a/.github/workflows/rust_tests.yml
+++ b/.github/workflows/rust_tests.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           packages: protobuf-compiler libasound2-dev
           version: v0
-      - uses: dtolnay/rust-toolchain@stable
+      - uses: dtolnay/rust-toolchain@nightly
         with:
           components: rustfmt clippy
       - name: Run sccache-cache
@@ -52,7 +52,7 @@ jobs:
         with:
           packages: protobuf-compiler libasound2-dev
           version: v0
-      - uses: dtolnay/rust-toolchain@stable
+      - uses: dtolnay/rust-toolchain@nightly
       - name: Run sccache-cache
         uses: mozilla-actions/sccache-action@v0.0.3
       - run: |
@@ -74,13 +74,13 @@ jobs:
         os:
           - ubuntu-latest
         rust:
-          - stable
+          - nightly
         experimental:
           - false
-        include:
-          - rust: nightly
-            os: ubuntu-latest
-            experimental: true
+        # include:
+        #   - rust: nightly
+        #     os: ubuntu-latest
+        #     experimental: true
     runs-on: ${{ matrix.os }}
     continue-on-error: ${{ matrix.experimental }}
     steps:
@@ -122,7 +122,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 18
-      - uses: dtolnay/rust-toolchain@stable
+      - uses: dtolnay/rust-toolchain@nightly
       - name: Install cargo-leptos
         run: cargo install cargo-leptos
       - name: Install dependencies
