Stop using cargo leptos end-to-end to hopefully get better errors if it fails to build

--- a/.github/workflows/rust_tests.yml
+++ b/.github/workflows/rust_tests.yml
@@ -134,7 +134,7 @@ jobs:
       - uses: JarvusInnovations/background-action@v1
         name: Build and Run Server
         with:
-          run: cargo leptos watch --release
+          run: cargo leptos serve --release
 
           wait-on: http://localhost:3000
 
