Are these load bearing newlines?

--- a/.github/workflows/rust_tests.yml
+++ b/.github/workflows/rust_tests.yml
@@ -134,9 +134,11 @@ jobs:
       - uses: JarvusInnovations/background-action@v1
         name: Build and Run Server
         with:
-          run: cargo leptos serve --release
+          run: \
+            cargo leptos serve
 
-          wait-on: http://localhost:3000
+          wait-on: \
+            http://localhost:3000
 
           tail: true
 
