--- a/.github/workflows/rust_tests.yml
+++ b/.github/workflows/rust_tests.yml
@@ -134,11 +134,10 @@ jobs:
       - uses: JarvusInnovations/background-action@v1
         name: Build and Run Server
         with:
+          wait-on: |
+            http://localhost:3000
           run: |
             cargo leptos serve
-
-          # wait-on: |
-          #   http://localhost:3000
 
           # tail: true
 
