--- a/.github/workflows/rust_tests.yml
+++ b/.github/workflows/rust_tests.yml
@@ -147,5 +147,5 @@ jobs:
         if: always()
         with:
           name: playwright-report
-          path: end2end/playwright-report/
+          path: ./end2end/playwright-report/
           retention-days: 30
