--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,6 @@
     "UNNEST",
     "vergen"
   ],
-  "rust-analyzer.check.features": ["ssr"],
+  "rust-analyzer.cargo.features": "all",
   "rust-analyzer.rustfmt.overrideCommand": ["leptosfmt", "--stdin", "--rustfmt"]
 }
