Get Recent Videos working in Leptos, with a sql query

--- a/leptos_site/Cargo.toml
+++ b/leptos_site/Cargo.toml
@@ -34,7 +34,7 @@ leptos_query = "0.4.2"
 syntect = { version = "5.0", optional = true }
 reqwest = { workspace = true, optional = true }
 uuid = { workspace = true, optional = true }
-chrono = { workspace = true, optional = true }
+chrono = { workspace = true }
 jsonwebtoken = { version = "9.2.0", optional = true }
 serde_json.workspace = true
 graphql_client = { version = "0.13.0", features = [
@@ -51,6 +51,7 @@ hydrate = [
     "leptos_meta/hydrate",
     "leptos_router/hydrate",
     "leptos_query/hydrate",
+    "chrono/wasmbind",
 ]
 ssr = [
     "dep:axum",
@@ -69,7 +70,6 @@ ssr = [
     "dep:sqlx",
     "dep:reqwest",
     "dep:uuid",
-    "dep:chrono",
     "dep:jsonwebtoken",
     "dep:graphql_client",
     "dep:syntect",
