--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ serde_json = "1.0"
 chrono = { version = "0.4.23", default-features = false, features = ["serde"] }
 
 rss = { version = "2.0", features = ["validation"] }
-markdown = "1.0.0-alpha"
+markdown = { version = "1.0.0-alpha", features = ["serde"] }
 include_dir = { version = "0.7.3", features = ["metadata", "glob"] }
 path-absolutize = "3.0"
 
