--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,3 +60,6 @@ sqlx = { version = "0.7", features = [
 uuid = { version = "1.6.1", features = ["v4", "serde"] }
 
 base64 = "0.21.7"
+
+[workspace.lints.clippy]
+pedantic = "forbid"
