--- a/db/Cargo.toml
+++ b/db/Cargo.toml
@@ -10,3 +10,6 @@ chrono.workspace = true
 miette = { workspace = true }
 sqlx = { workspace = true }
 tracing = { workspace = true }
+
+[lints]
+workspace = true
