--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,14 @@ members = [
 ]
 resolver = "2"
 
+[workspace.lints.clippy]
+pedantic = "deny"
+missing_errors_doc = "allow"
+module_name_repetitions = "allow"
+
+[workspace.lints.rust]
+unsafe_code = "forbid"
+
 [workspace.dependencies]
 clap = { version = "4.2", features = ["derive"] }
 reqwest = { version = "0.11.12", features = [
@@ -60,6 +68,3 @@ sqlx = { version = "0.7", features = [
 uuid = { version = "1.6.1", features = ["v4", "serde"] }
 
 base64 = "0.21.7"
-
-[workspace.lints.clippy]
-pedantic = "forbid"
