Remove most of the clippy lints

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,9 @@ missing_panics_doc = "allow"
 module_name_repetitions = "allow"
 blocks_in_conditions = "allow"
 must_use_candidate = "allow"
-no-effect-underscore-binding = "warn"
-struct-field-names = "warn"
-items-after-statements = "warn"
+no-effect-underscore-binding = "allow"
+struct-field-names = "allow"
+items-after-statements = "allow"
 
 [workspace.lints.rust]
 unsafe_code = "forbid"
