Upgrade tracing crates and hope for the best

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,13 +34,14 @@ miette = { version = "5.7", features = ["fancy"] }
 tokio = { version = "1.21", features = ["full"] }
 
 tracing = "0.1.37"
-tracing-opentelemetry = "0.19.0"
+tracing-opentelemetry = "0.24.0"
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 tracing-tree = "0.2.2"
-opentelemetry = { version = "0.19.0", features = [
+opentelemetry = { version = "0.23.0", features = [], default-features = false }
+opentelemetry_sdk = { version = "0.23.0", features = [
   "rt-tokio",
 ], default-features = false }
-opentelemetry-otlp = { version = "0.12.0", features = [
+opentelemetry-otlp = { version = "0.16.0", features = [
   "http-proto",
   "reqwest-rustls",
   "reqwest-client",
