--- a/tracing-common/Cargo.toml
+++ b/tracing-common/Cargo.toml
@@ -20,6 +20,7 @@ tracing-opentelemetry = { workspace = true }
 tracing-subscriber = { workspace = true }
 tracing-tree = { workspace = true }
 opentelemetry = { workspace = true }
+opentelemetry_sdk = { workspace = true }
 opentelemetry-otlp = { workspace = true }
 
 miette = { workspace = true }
