--- a/byte/Cargo.toml
+++ b/byte/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2021"
 
 [dependencies]
 chrono = { workspace = true }
-miette = { workspace = true }
 tokio = { workspace = true }
 tracing = { workspace = true }
 serde.workspace = true
@@ -25,6 +24,8 @@ irc = { version = "0.15.0", default-features = false, features = ["tls-rust"] }
 samplerate = "0.2.4"
 whisper-rs = { version = "0.8.0" }
 futures = "0.3.28"
+
+color-eyre = "0.6.3"
 
 [lints]
 workspace = true
