--- a/cja/Cargo.toml
+++ b/cja/Cargo.toml
@@ -16,7 +16,6 @@ uuid.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 chrono.workspace = true
-miette.workspace = true
 base64.workspace = true
 
 async-trait = "0.1.77"
@@ -29,6 +28,7 @@ tower-service = "0.3.2"
 tower = "0.4.13"
 
 tracing-common = { path = "../tracing-common" }
+color-eyre = "0.6.3"
 
 [lints]
 workspace = true
