--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -84,6 +84,7 @@ futures = "0.3.29"
 chrono-humanize = "0.2.3"
 rsa = "0.9.4"
 rand = "0.8.5"
+color-eyre = "0.6.3"
 
 [build-dependencies]
 vergen = { version = "8.0.0", features = ["git", "gitoxide", "rustc"] }
