--- a/.github/workflows/shots.yml
+++ b/.github/workflows/shots.yml
@@ -13,6 +13,8 @@ jobs:
   shot-scraper:
     runs-on: ubuntu-latest
     if: ${{ github.ref == 'refs/heads/main' }}
+    outputs:
+      pr_number: ${{ steps.create-pr.outputs.pull-request-number }}
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python 3.10
@@ -59,11 +61,31 @@ jobs:
           git add -A
           git commit -m "Screenshots Updated at ${timestamp}" || exit 0
 
-      - name: Push changes
-        run: git push origin HEAD
+      - name: Get current date
+        id: date
+        run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
       - name: Create Pull Request
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        id: create-pr
+        uses: peter-evans/create-pull-request@v6
+        with:
+          commit-message: Update screenshot for ${{ steps.date.outputs.date }}
+          title: "Update Daily Screenshot -- ${{ steps.date.outputs.date }}"
+          body: "Automated daily screenshot update for ${{ steps.date.outputs.date }}"
+          branch: update-screenshot-${{ steps.date.outputs.date }}
+
+  approve-and-merge:
+    runs-on: ubuntu-latest
+    needs: shot-scraper
+    env:
+      PR_NUMBER: ${{ needs.shot-scraper.outputs.pr_number }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Approve Pull Request
         run: |
-          current_date=$(date +%Y-%m-%d)
-          gh pr create --title "Update Daily Screenshot ${current_date}" --body "Automated PR to update screenshots" --base main
+          gh pr review --approve "$PR_NUMBER"
+
+      - name: Enable Auto-merge
+        run: |
+          gh pr merge --auto --merge "$PR_NUMBER"
