--- a/.github/workflows/shots.yml
+++ b/.github/workflows/shots.yml
@@ -56,11 +56,6 @@ jobs:
           current_date=$(date +%Y-%m-%d)
           branch_name="update-screenshots-${current_date}"
           git checkout -b $branch_name
-      - name: Commit changes
-        run: |
-          git add -A
-          git commit -m "Screenshots Updated at ${timestamp}" || exit 0
-
       - name: Get current date
         id: date
         run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
@@ -71,7 +66,8 @@ jobs:
           commit-message: Update screenshot for ${{ steps.date.outputs.date }}
           title: "Update Daily Screenshot -- ${{ steps.date.outputs.date }}"
           body: "Automated daily screenshot update for ${{ steps.date.outputs.date }}"
-          branch: update-screenshot-${{ steps.date.outputs.date }}
+          branch: update-screenshot
+          branch-suffix: timestamp
 
   approve-and-merge:
     runs-on: ubuntu-latest
