--- a/.github/workflows/shots.yml
+++ b/.github/workflows/shots.yml
@@ -49,13 +49,6 @@ jobs:
       - name: Optimize PNGs
         run: |-
           oxipng -o 4 -i 0 --strip safe screenshots/*.png
-      - name: Create new branch
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@users.noreply.github.com"
-          current_date=$(date +%Y-%m-%d)
-          branch_name="update-screenshots-${current_date}"
-          git checkout -b $branch_name
       - name: Get current date
         id: date
         run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
@@ -68,6 +61,7 @@ jobs:
           body: "Automated daily screenshot update for ${{ steps.date.outputs.date }}"
           branch: update-screenshot
           branch-suffix: timestamp
+          base: main
 
   approve-and-merge:
     runs-on: ubuntu-latest
