Tried to merge the PR without a commit, oops. This adds the GH_TOKEN env var that the gh cli wants

--- a/.github/workflows/shots.yml
+++ b/.github/workflows/shots.yml
@@ -68,6 +68,7 @@ jobs:
     needs: shot-scraper
     env:
       PR_NUMBER: ${{ needs.shot-scraper.outputs.pr_number }}
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
