--- a/.github/workflows/shots.yml
+++ b/.github/workflows/shots.yml
@@ -9,6 +9,7 @@ permissions:
   contents: write
   pull-requests: write
   actions: write
+  id-token: write
 
 jobs:
   shot-scraper:
@@ -53,27 +54,20 @@ jobs:
       - name: Get current date
         id: date
         run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
-      - name: Create Pull Request
-        id: create-pr
-        uses: peter-evans/create-pull-request@v6
+      - run: git branch -b update-screenshot-${{ steps.date.outputs.date }}
+      - run: git push --set-upstream origin update-screenshot-${{ steps.date.outputs.date }}
+      - name: Install OIDC Client from Core Package
+        run: npm install @actions/core@1.6.0 @actions/http-client
+      - name: Get Id Token
+        uses: actions/github-script@v6
+        id: idtoken
         with:
-          commit-message: Update screenshot for ${{ steps.date.outputs.date }}
-          title: "Update Daily Screenshot -- ${{ steps.date.outputs.date }}"
-          body: "Automated daily screenshot update for ${{ steps.date.outputs.date }}"
-          branch: update-screenshot
-          branch-suffix: timestamp
-          base: main
-
-  approve-and-merge:
-    runs-on: ubuntu-latest
-    needs: shot-scraper
-    env:
-      PR_NUMBER: ${{ needs.shot-scraper.outputs.pr_number }}
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Enable Auto-merge
+          script: |
+            const coredemo = require('@actions/core')
+            let id_token = await coredemo.getIDToken()
+            coredemo.setOutput('id_token', id_token)
+      - name: Make PR
         run: |
-          gh pr merge --auto --squash "$PR_NUMBER"
+          curl -X POST https://workflow-automation.fly.dev/api/v1/workflows/screenshot-update \
+            -H "Content-Type: application/json" \
+            -d '{"github_oidc_jwt": "${{ steps.idtoken.outputs.id_token }}", "owner": "coreyja", "repo": "coreyja.com", "base_branch": "main", "head_branch": "update-screenshot-${{ steps.date.outputs.date }}", "title": "Update Daily Screenshot -- ${{ steps.date.outputs.date }}", "body": "Automated daily screenshot update for ${{ steps.date.outputs.date }}"}'
