--- a/live.shots.yml
+++ b/live.shots.yml
@@ -1,30 +1,30 @@
-- url: https://beta.coreyja.com
+- url: https://coreyja.com
   height: 2160
   width: 3840
   output: screenshots/4k.png
   wait: 750
-- url: https://beta.coreyja.com
+- url: https://coreyja.com
   height: 1080
   width: 1920
   output: screenshots/desktop.png
   wait: 750
-- url: https://beta.coreyja.com
+- url: https://coreyja.com
   height: 926
   width: 428
   output: screenshots/iphone.png
   wait: 750
-- url: https://beta.coreyja.com
+- url: https://coreyja.com
   height: 1366
   width: 1024
   output: screenshots/ipad.png
   wait: 750
 
-- url: https://beta.coreyja.com/posts
+- url: https://coreyja.com/posts
   height: 1080
   width: 1920
   output: screenshots/desktop/posts_index.png
   wait: 750
-- url: https://beta.coreyja.com/posts/twitch-webhook-verification
+- url: https://coreyja.com/posts/twitch-webhook-verification
   height: 1080
   width: 1920
   output: screenshots/desktop/example_post.png
