--- a/.github/workflows/shots.yml
+++ b/.github/workflows/shots.yml
@@ -14,7 +14,7 @@ permissions:
 jobs:
   shot-scraper:
     runs-on: ubuntu-latest
-    # if: ${{ github.ref == 'refs/heads/main' }}
+    if: ${{ github.ref == 'refs/heads/main' }}
     outputs:
       pr_number: ${{ steps.create-pr.outputs.pull-request-number }}
     steps:
@@ -55,6 +55,8 @@ jobs:
         id: date
         run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
       - run: git checkout -b update-screenshot-${{ steps.date.outputs.date }}
+      - run: git add screenshots
+      - run: git commit -m "Update daily screenshots for ${{ steps.date.outputs.date }}"
       - run: git push --set-upstream origin update-screenshot-${{ steps.date.outputs.date }}
       - name: Install OIDC Client from Core Package
         run: npm install @actions/core@1.6.0 @actions/http-client
