--- a/.github/workflows/shots.yml
+++ b/.github/workflows/shots.yml
@@ -56,13 +56,25 @@ jobs:
         run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
       - run: git checkout -b update-screenshot-${{ steps.date.outputs.date }}
       - run: git add screenshots
-      - run: git config --global user.email "workflow-automation@coreyja.com"
-      - run: git config --global user.name "Coreyja Workflow Automation"
-      - run: git commit -m "Update daily screenshots for ${{ steps.date.outputs.date }}"
-      - run: git push --set-upstream origin update-screenshot-${{ steps.date.outputs.date }}
+      - name: Check for changes
+        id: git-check
+        run: |
+          git add screenshots
+          git status --porcelain
+          echo "changes=$(git status --porcelain | wc -l)" >> $GITHUB_OUTPUT
+      - name: Commit and push if there are changes
+        if: steps.git-check.outputs.changes > 0
+        run: |
+          git config --global user.email "workflow-automation@coreyja.com"
+          git config --global user.name "Coreyja Workflow Automation"
+          git commit -m "Update daily screenshots for ${{ steps.date.outputs.date }}"
+          git push --set-upstream origin update-screenshot-${{ steps.date.outputs.date }}
+
       - name: Install OIDC Client from Core Package
+        if: steps.git-check.outputs.changes > 0
         run: npm install @actions/core@1.6.0 @actions/http-client
       - name: Get Id Token
+        if: steps.git-check.outputs.changes > 0
         uses: actions/github-script@v6
         id: idtoken
         with:
@@ -72,6 +84,7 @@ jobs:
             coredemo.setOutput('id_token', id_token)
             console.log(id_token)
       - name: Make PR
+        if: steps.git-check.outputs.changes > 0
         run: |
           curl -X POST https://workflow-automation.fly.dev/create-pr \
             -H "Content-Type: application/json" \
