--- a/.github/workflows/fly_review.yml
+++ b/.github/workflows/fly_review.yml
@@ -25,8 +25,13 @@ jobs:
       name: review
       # The script in the `deploy` sets the URL output for each review app.
       url: ${{ steps.deploy.outputs.url }}
-    if: ${{ !startsWith(github.ref_name, 'update-screenshot-') }}
+    if: ${{ !startsWith(github.head_ref || github.ref_name, 'update-screenshot-') }}
     steps:
+      - name: Debug
+        run: |
+          echo "github.ref: ${{ github.ref }}"
+          echo "github.ref_name: ${{ github.ref_name }}"
+          echo "github.head_ref: ${{ github.head_ref }}"
       - name: Get code
         uses: actions/checkout@v4
 
